chore: version bump

--- a/src/RVA.RedundantQueue/RVA.RedundantQueue/RVA.RedundantQueue.csproj
+++ b/src/RVA.RedundantQueue/RVA.RedundantQueue/RVA.RedundantQueue.csproj
@@ -3,5 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
+    
+    <PropertyGroup>
+        <Version>1.0.5</Version>
+    </PropertyGroup>
 
 </Project>
