--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -32,11 +32,8 @@ jobs:
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: RVA.RedundantQueue
           
-          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          VERSION_FILE_PATH: src/RVA.RedundantQueue/Package.nuspec
-
           # Regex pattern to extract version info in a capturing group
-          VERSION_REGEX: ^\s*<version>(.*)<\/version>\s*$
+          VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           
           # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
           # VERSION_STATIC: 1.0.0
