--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,10 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
+*.idea/
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
