--- a/src/RVA.RedundantQueue/RVA.RedundantQueue.Tests/RVA.RedundantQueue.Tests.csproj
+++ b/src/RVA.RedundantQueue/RVA.RedundantQueue.Tests/RVA.RedundantQueue.Tests.csproj
@@ -9,7 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AutoFixture.AutoMoq" Version="4.15.0" />
       <PackageReference Include="AutoFixture.Xunit" Version="4.15.0" />
-      <PackageReference Include="FluentAssertions" Version="6.0.0-alpha0001" />
+      <PackageReference Include="FluentAssertions" Version="5.10.3" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
       <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
