--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,5 @@ src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
 src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
 src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
 src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
+
+*.DS_Store
