--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,5 @@ src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
 src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
 
 *.DS_Store
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/workspace.xml
+src/RVA.RedundantQueue/.idea/.idea.RVA.RedundantQueue/.idea/contentModel.xml
