--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -23,11 +23,11 @@ jobs:
 
       # restore dependencies  
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore src/RVA.RedundantQueue/RVA.RedundantQueue.sln
 
         # build project
       - name: Build
-        run: dotnet build --configuration $config --no-restore
+        run: dotnet build --configuration $config --no-restore src/RVA.RedundantQueue/RVA.RedundantQueue.sln
 
         # set pr number, if it's a pr build
       - name: set pr build number
@@ -49,7 +49,11 @@ jobs:
 
       # run tests with built project
       - name: Test PR      
-        run: dotnet test --no-restore --no-build --configuration $config --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+        run: |
+              dotnet test --no-restore --no-build \
+              --configuration $config \
+              --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"  \
+              src/RVA.RedundantQueue/RVA.RedundantQueue.sln
     
       # upload report as build artifact
       - name: Upload a Build Artifact
