--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -27,7 +27,7 @@ jobs:
 
         # build project
       - name: Build
-        run: dotnet build --configuration $config --no-restore src/RVA.RedundantQueue/RVA.RedundantQueue.sln
+        run: dotnet build --configuration Release --no-restore src/RVA.RedundantQueue/RVA.RedundantQueue.sln
 
         # set pr number, if it's a pr build
       - name: set pr build number
@@ -51,7 +51,7 @@ jobs:
       - name: Test PR      
         run: |
               dotnet test --no-restore --no-build \
-              --configuration $config \
+              --configuration Release \
               --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"  \
               src/RVA.RedundantQueue/RVA.RedundantQueue.sln
     
