--- a/src/RVA.RedundantQueue/RVA.RedundantQueue.Tests/RVA.RedundantQueue.Tests.csproj
+++ b/src/RVA.RedundantQueue/RVA.RedundantQueue.Tests/RVA.RedundantQueue.Tests.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="AutoFixture.Xunit" Version="4.15.0" />
       <PackageReference Include="FluentAssertions" Version="5.10.3" />
       <PackageReference Include="GitHubActionsTestLogger" Version="1.1.2" />
+      <PackageReference Include="LiquidTestReports.Markdown" Version="1.0.9" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
       <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
