--- a/src/RVA.RedundantQueue/RVA.RedundantQueue.AspNetCore/RVA.RedundantQueue.AspNetCore.csproj
+++ b/src/RVA.RedundantQueue/RVA.RedundantQueue.AspNetCore/RVA.RedundantQueue.AspNetCore.csproj
@@ -7,10 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\RVA.RedundantQueue\RVA.RedundantQueue.csproj" />
+      <PackageReference Include="RVA.RedundantQueue" Version="[1.2.0,2.0.0)" />
     </ItemGroup>
 
 </Project>
