ci: automated version bumping

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,13 +1,9 @@
 name: NuGet - Core Libraries
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [closed]
-    branches:
-      - main
+  release:
+      types:
+        - released
 
 jobs:
   build:
